# azure-openai-gpt-line-chatbot-api-python

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  azure_openai.py  main.py  pyproject.toml
